--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # ignore visual studio cache file
 .vs/
+
+# ignore vitis projects
+local_seq_align_multiple_sa/local_seq_align_multiple_sa_vitis
+local_seq_align_multiple_sa/vitis_hls.log
+
