--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 local_seq_align_multiple_sa/local_seq_align_multiple_sa_vitis/
 local_seq_align_multiple_sa/vitis_hls.log
 
+# ingore vitis project folder
 vitis/
+c_cpp_properties.json
