--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore visual studio cache file
 .vs/
 .vscode/
+CMakeLists.txt
+cmake-build-debug/
+
 
 # ignore vitis projects
 local_seq_align_multiple_sa/local_seq_align_multiple_sa_vitis/
