write file in the pipeline
Former-commit-id: a40223e398c74b4d27abb220c06a39594d9630e6 [formerly dbf120f327650ba5b17fcc6fa63dbaf6f643673a] [formerly 881b6ea99290262a2feee50b2d31d7ac8ccdfec3 [formerly b50a3869ab8d4e286590603e67857f6fabad3163]]
Former-commit-id: 881b6ea99290262a2feee50b2d31d7ac8ccdfec3
Former-commit-id: 45ae2c636651bd835d25af5cf71f26a5fabfa82d

--- a/inputs/config.json
+++ b/inputs/config.json
@@ -4,7 +4,7 @@
 
   "kernel": {
     "inputs": {
-      "query_length": 1024,
+      "query_length": 512,
       "reference_length": 1024
     },
     "processing_element": {
@@ -19,7 +19,7 @@
       "do_traceback": "true",
       "pointer_bits": 3
     },
-    "panelties": {
+    "penalties": {
       "linear_gap_penalty": -1,
       "match": 1,
       "mismatch": -1,
@@ -32,7 +32,7 @@
     "clock_period": "4ns"
   },
   "vitis_hls": {
-    "vitis_hls_home": "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS",
+    "vitis_hls_home": "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1",
     "env": {
       "LD_PRELOAD": "/home/chye@AD.UCSD.EDU/libtinfo.so.5.9"
     }
