--- a/inputs/config.json
+++ b/inputs/config.json
@@ -1,6 +1,6 @@
 {
   "project_name": "sample_project",
-  "project_directory": "/home/yic033@AD.UCSD.EDU/DP-HLS/outputs",
+  "output_directory": "/home/yic033@AD.UCSD.EDU/DP-HLS/outputs",
 
   "kernel": {
     "inputs": {
@@ -8,7 +8,7 @@
       "reference_length": 1024
     },
     "processing_element": {
-      "type": "affine",
+      "type": "linear",
       "number": 32
     },
     "align_block": {
@@ -28,13 +28,19 @@
     }
   },
   "vitis_project": {
-    "platform": "xilinx_u280_xdma_201920_3",
-    "clock_period": "4ns"
+    "device": "xcvu5p-flva2104-1-e",
+    "project_name": "multiple_seq_align",
+    "solution_name": "multiple_seq_align",
+    "top_level_function": "seq_align_multiple",
+    "clock_period": "40n"
   },
   "vitis_hls": {
     "vitis_hls_home": "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1",
     "env": {
       "LD_PRELOAD": "/home/chye@AD.UCSD.EDU/libtinfo.so.5.9"
     }
+  },
+  "xrt": {
+    "xrt_home": "/home/AD.UCSD.EDU/swalia/xilinx/xrt/2021.1.1"
   }
 }
