updated the gitignore
Former-commit-id: bf400bd5c397661d74b3b4f35733c3a1e4a46597

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 .vscode/
 CMakeLists.txt
 cmake-build-debug/
-
+outputs/CMakeFiles/
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
 
 # ignore vitis projects
 local_seq_align_multiple_sa/local_seq_align_multiple_sa_vitis/
