--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ outputs/CMakeFiles/
 CMakeFiles/
 CMakeCache.txt
 cmake_install.cmake
+.idea/
 
 # ignore vitis projects
 local_seq_align_multiple_sa/local_seq_align_multiple_sa_vitis/
