finished align local linear modularity design.
Former-commit-id: 015d894f9bd02c75579326e5b3d89beb81f02a4f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ add_executable(align_local_linear "testbench/seq_align_test.cpp"
     "src/toplevel/seq_align_multiple.cpp"
     "src/align/align_local_linear.cpp"
     "src/pe/pe_local_linear.cpp"
-    "src/traceback.cpp")
+    "src/traceback.cpp" "src/utils.cpp")
 
 add_executable(align_global_linear "testbench/seq_align_test.cpp"
     "configs/global_linear_params.h"  
@@ -43,7 +43,7 @@ add_executable(align_global_linear "testbench/seq_align_test.cpp"
     "src/toplevel/seq_align_multiple.cpp"
     "src/align/align_local_linear.cpp"
     "src/pe/pe_local_linear.cpp"
-    "src/traceback.cpp")
+    "src/traceback.cpp" "src/utils.cpp")
 
 
 # Add include to Xilinx Library FIles
