emit affine kernels
Former-commit-id: b201c820097b1af6b6ca01c05fe7f24ee74f9a10 [formerly 847cf988e54d030cec66dc4f40aa226b5064ce0f]
Former-commit-id: 89a43136a9b78d3ccd4ba43d6cd03f56b57191ad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,10 +65,9 @@ add_executable(align_local_affine "testbench/test_local_affine.cpp" "include/par
 
     "src/toplevel/seq_align_multiple.cpp"
     "src/align/align.cpp"
-    "src/pe/pe_local_affine.cpp"
     "src/traceback.cpp" 
     "src/utils.cpp"  
-    "src/initial.cpp" "src/pe/pe_local_affine.cpp")
+    "src/initial.cpp" "src/pe/pe.cpp")
 
 add_executable(align_global_affine "testbench/test_global_affine.cpp" "include/params.h"
     "include/seq_align_multiple.h"
