updated task-control PE Array
Former-commit-id: af282d64411d7a04a8632398052013de299e10ca [formerly 6fd072dccaf2f023f93724cf39ec9b8334fe6bb5] [formerly 77fdf4d1fd4ce0b040539d0132894f2881659d7c [formerly 8339fd0e1da901e81e60072f77deeb8e31986ada]]
Former-commit-id: 77fdf4d1fd4ce0b040539d0132894f2881659d7c
Former-commit-id: 703b7590fe5bfce3376255b090d24459398ee048

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,6 @@ set(RAPTOR 1)
 set(CMAKE_C_COMPILER "/usr/bin/gcc")
 set(CMAKE_CXX_COMPILER "/usr/bin/c++")  # Use g++ compiler, but subject to change for v++ compiler.
 
-#add_definitions(-DDEBUG=0)
 
 set(EXECUTABLE_TARGETS
     align_local_linear
@@ -106,8 +105,12 @@ add_executable(align_global_affine "testbench/test_global_affine.cpp" "include/p
 
 # Add include to Xilinx Library FIles
 if (RAPTOR)
-    set(HLS_HOME "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1")
-    set(XRT_HOME "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1")
+    set(HLS_HOME "/home/AD.UCSD.EDU/yic033/Xilinx/Vitis_HLS/2023.1")
+    set(XRT_HOME "/home/AD.UCSD.EDU/yic033/Xilinx/Vitis_HLS/2023.1")
+
+    #set(HLS_HOME "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1")
+    #set(XRT_HOME "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1")
+
 
     include_directories(${EXECUTABLE_TARGETS} PUBLIC "${HLS_HOME}/include")
     include_directories(${EXECUTABLE_TARGETS} PUBLIC ${PROJECT_SOURCE_DIR}/include)
