finished re-write
Former-commit-id: f1bc14e17072ebec6298169790dcb9697bfdecac [formerly fe0dbf2aa22c71b1fc3d9632fa6a142a7df53c7d]
Former-commit-id: 24ba6c55c73e93cabea3f40fa0dcac8c5d0b57b8

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ seq_align_test
 out/
 Makefile
 
+# ignore build file at the top level
+/build/
+
 # ignore vitis projects
 local_seq_align_multiple_sa/local_seq_align_multiple_sa_vitis/
 local_seq_align_multiple_sa/vitis_hls.log
