Added python interface
Former-commit-id: 9c018f682bdb40ce4c8476e9343fa0c6b900f8d1 [formerly d179cc83ccf65aa312492acbbf4ed263cc75a29f] [formerly e122d85e4587490d89b81dd52d12e1be41d4c7d4 [formerly 3bc7b7298002d1d9655f6a7744939807d11677ad]]
Former-commit-id: e122d85e4587490d89b81dd52d12e1be41d4c7d4
Former-commit-id: 937f6eedf2f7e7f352ad63eb52dd7f8148cb2e21

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,20 +14,21 @@ set(CMAKE_CXX_COMPILER "/usr/bin/c++")  # Use g++ compiler, but subject to chang
 
 
 set(EXECUTABLE_TARGETS
-    align_local_linear
-    align_global_linear
-    align_local_affine
-    align_global_affine
+    # align_local_linear
+    # align_global_linear
+    # align_local_affine
+    # align_global_affine
     tests
-    incremental_sim
+    baseline_local_linear
+    test_align
 )
 
-add_executable(incremental_sim "increment/legacy/local_linear.h"
+add_executable(baseline_local_linear "increment/legacy/local_linear.h"
     "increment/legacy/local_linear.cpp"
     "increment/legacy/shift_register.h"
     "increment/legacy/local_linear_testbench.cpp" )
 
-# Testbench executable
+# Testbench for incremental components. 
 add_executable(tests "increment/testbench/main.cpp"
     "increment/include/testbench.h"
     "increment/include/PE.h"
@@ -37,87 +38,88 @@ add_executable(tests "increment/testbench/main.cpp"
     "increment/src/pe/pe.cpp"
     "increment/src/align/align.cpp")
 
+add_executable(test_align "increment/testbench/test_align.cpp"
+    "increment/include/params.h"
+    "increment/include/seq_align_multiple.h"
+    "increment/include/seq_align.h"
+    "increment/include/PE.h"
+    "increment/include/utils.h"
+    "increment/src/toplevel/seq_align_multiple.cpp"
+    "increment/src/align/align.cpp"
+    "increment/src/pe/pe.cpp"
+    "increment/src/traceback.cpp")
+
+
 # Add source to this project's executable.
-add_executable(align_local_linear "testbench/test_local_linear.cpp" "include/params.h"
-    "include/seq_align_multiple.h"
-    "include/seq_align.h"
-    "include/PE.h"
-    "include/host.h"
-    "include/loop_counter.h"
-    "include/traceback.h"
-    "include/initial.h"
+# add_executable(align_local_linear "testbench/test_local_linear.cpp" "include/params.h"
+#     "include/seq_align_multiple.h"
+#     "include/seq_align.h"
+#     "include/PE.h"
+#     "include/host.h"
+#     "include/loop_counter.h"
+#     "include/traceback.h"
+#     "include/initial.h"
 
-    "src/toplevel/seq_align_multiple.cpp"
-    "src/align/align.cpp"
-    "src/traceback.cpp" 
-    "src/utils.cpp"  
-    "src/initial.cpp" 
-    "src/pe/pe.cpp")
+#     "src/toplevel/seq_align_multiple.cpp"
+#     "src/align/align.cpp"
+#     "src/traceback.cpp" 
+#     "src/utils.cpp"  
+#     "src/initial.cpp" 
+#     "src/pe/pe.cpp")
 
-add_executable(align_global_linear "testbench/test_global_linear.cpp" "include/params.h"
-    "include/seq_align_multiple.h"
-    "include/seq_align.h"
-    "include/PE.h"
-    "include/host.h"
-    "include/loop_counter.h"
-    "include/traceback.h"
-    "include/initial.h" 
+# add_executable(align_global_linear "testbench/test_global_linear.cpp" "include/params.h"
+#     "include/seq_align_multiple.h"
+#     "include/seq_align.h"
+#     "include/PE.h"
+#     "include/host.h"
+#     "include/loop_counter.h"
+#     "include/traceback.h"
+#     "include/initial.h" 
 
-    "src/toplevel/seq_align_multiple.cpp"
-    "src/align/align.cpp"
-    "src/pe/pe_global_linear.cpp"
-    "src/traceback.cpp"
-    "src/utils.cpp"
-    "src/initial.cpp" "src/pe/pe.cpp")
+#     "src/toplevel/seq_align_multiple.cpp"
+#     "src/align/align.cpp"
+#     "src/pe/pe_global_linear.cpp"
+#     "src/traceback.cpp"
+#     "src/utils.cpp"
+#     "src/initial.cpp" "src/pe/pe.cpp")
 
-add_executable(align_local_affine "testbench/test_local_affine.cpp" "include/params.h"
-    "include/seq_align_multiple.h"
-    "include/seq_align.h"
-    "include/PE.h"
-    "include/host.h"
-    "include/loop_counter.h"
-    "include/traceback.h"
-    "include/initial.h"
+# add_executable(align_local_affine "testbench/test_local_affine.cpp" "include/params.h"
+#     "include/seq_align_multiple.h"
+#     "include/seq_align.h"
+#     "include/PE.h"
+#     "include/host.h"
+#     "include/loop_counter.h"
+#     "include/traceback.h"
+#     "include/initial.h"
 
-    "src/toplevel/seq_align_multiple.cpp"
-    "src/align/align.cpp"
-    "src/traceback.cpp" 
-    "src/utils.cpp"  
-    "src/initial.cpp" "src/pe/pe.cpp")
+#     "src/toplevel/seq_align_multiple.cpp"
+#     "src/align/align.cpp"
+#     "src/traceback.cpp" 
+#     "src/utils.cpp"  
+#     "src/initial.cpp" "src/pe/pe.cpp")
 
-add_executable(align_global_affine "testbench/test_global_affine.cpp" "include/params.h"
-    "include/seq_align_multiple.h"
-    "include/seq_align.h"
-    "include/PE.h"
-    "include/host.h"
-    "include/loop_counter.h"
-    "include/traceback.h"
-    "include/initial.h"
+# add_executable(align_global_affine "testbench/test_global_affine.cpp" "include/params.h"
+#     "include/seq_align_multiple.h"
+#     "include/seq_align.h"
+#     "include/PE.h"
+#     "include/host.h"
+#     "include/loop_counter.h"
+#     "include/traceback.h"
+#     "include/initial.h"
 
-    "src/toplevel/seq_align_multiple.cpp"
-    "src/align/align.cpp"
-    "src/traceback.cpp" 
-    "src/utils.cpp" 
-    "src/initial.cpp" "src/pe/pe.cpp")
-
-#target_compile_definitions(align_local_linear PRIVATE ALIGN_LOCAL_LINEAR=1)
-#target_compile_definitions(align_local_affine PRIVATE ALIGN_LOCAL_AFFINE=1)
-#target_compile_definitions(align_global_linear PRIVATE ALIGN_GLOBAL_LINEAR=1)
-#target_compile_definitions(align_global_affine PRIVATE ALIGN_GLOBAL_AFFINE=1)
+#     "src/toplevel/seq_align_multiple.cpp"
+#     "src/align/align.cpp"
+#     "src/traceback.cpp" 
+#     "src/utils.cpp" 
+#     "src/initial.cpp" "src/pe/pe.cpp")
 
 # Add include to Xilinx Library FIles
 if (RAPTOR)
-    set(HLS_HOME "/home/AD.UCSD.EDU/yic033/Xilinx/Vitis_HLS/2023.1")
-    set(XRT_HOME "/home/AD.UCSD.EDU/yic033/Xilinx/Vitis_HLS/2023.1")
-
-    #set(HLS_HOME "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1")
-    #set(XRT_HOME "/home/AD.UCSD.EDU/swalia/xilinx/vitis/Vitis_HLS/2022.1")
-
+    set(HLS_HOME "/home/AD.UCSD.EDU/swalia/Xilinx/Vitis_HLS/2023.1")
 
     include_directories(${EXECUTABLE_TARGETS} PUBLIC "${HLS_HOME}/include")
-    include_directories(${EXECUTABLE_TARGETS} PUBLIC ${PROJECT_SOURCE_DIR}/include)
-    include_directories(${EXECUTABLE_TARGETS} PUBLIC "${XRT_HOME}/include" "${HLS_HOME}/include")
-    link_directories(${EXECUTABLE_TARGETS} PUBLIC "${HLS_HOME}/lib" "${XRT_HOME}/lib")
+
+    link_directories(${EXECUTABLE_TARGETS} PUBLIC "${HLS_HOME}/lib")
     link_directories(${EXECUTABLE_TARGETS} PUBLIC "/usr/lib/x86_64-linux-gnu" "/usr/lib32" "/usr/libx32")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 else()
