Debugged double free after register Result class.
Former-commit-id: b5764dac1b8b46b73572cbaa035a46c6da0f715c [formerly eab37e652ca7fa7cdb3ed1f5ddcc5fcf72426ea6] [formerly a22a7cbc56c053fe56b6de99acfef0d335144e1d [formerly 4c73890158d6c9e4d070dc864002bf45e5bc909c]]
Former-commit-id: a22a7cbc56c053fe56b6de99acfef0d335144e1d
Former-commit-id: 6d00b80b492ed383ffac1ae0a5816e501cf9eb50

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,20 @@ add_executable(test_align "increment/testbench/test_align.cpp"
     "increment/src/pe/pe.cpp"
     "increment/src/traceback.cpp")
 
+add_executable(test_pyapi_kernel_traceback "increment/testbench/test_pyapi.cpp"
+    "increment/include/params.h"
+    "increment/include/seq_align_multiple.h"
+    "increment/include/seq_align.h"
+    "increment/include/PE.h"
+    "increment/include/utils.h"
+    "increment/include/pyapi.h"
+    "increment/src/toplevel/seq_align_multiple.cpp"
+    "increment/src/align/align.cpp"
+    "increment/src/pe/pe.cpp"
+    "increment/src/traceback.cpp"
+    "increment/src/pyapi.cpp")
+
+
 
 # Add source to this project's executable.
 # add_executable(align_local_linear "testbench/test_local_linear.cpp" "include/params.h"
