--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ add_executable(baseline_local_linear "increment/legacy/local_linear.h"
 add_executable(tests "increment/testbench/test_align.cpp"
     "increment/include/testbench.h"
     "increment/include/PE.h"
-    "increment/include/seq_align.h"
+    "increment/include/align.h"
     "increment/include/utils.h"
     "increment/testbench/testbench.cpp"
     "increment/src/pe/pe.cpp"
@@ -45,7 +45,7 @@ add_executable(tests "increment/testbench/test_align.cpp"
 add_executable(test_align "increment/testbench/test_align.cpp"
     "increment/include/params.h"
     "increment/include/seq_align_multiple.h"
-    "increment/include/seq_align.h"
+    "increment/include/align.h"
     "increment/include/PE.h"
     "increment/include/utils.h"
     "increment/include/pyapi.h"
@@ -59,7 +59,7 @@ add_executable(test_align "increment/testbench/test_align.cpp"
 add_executable(test_pyapi "increment/testbench/test_align.cpp"
     "increment/include/params.h"
     "increment/include/seq_align_multiple.h"
-    "increment/include/seq_align.h"
+    "increment/include/align.h"
     "increment/include/PE.h"
     "increment/include/utils.h"
     "increment/include/pyapi.h"
