Host and bitstream successfully compile
Former-commit-id: d428488da5d5ad863795f69665daab12322df04c [formerly be2ded4248c025e0c182c844ebffe463ee3065bd] [formerly d60918293c569347e7fe7f9a005b701807d94c70 [formerly 33bb6a6ad1a1c98899c1cbe1b57df4210b35aa81]]
Former-commit-id: d60918293c569347e7fe7f9a005b701807d94c70
Former-commit-id: 9ae933edf95563ef33303fa94409f01b7c1e8b26

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ local_seq_align_multiple_sa/vitis_hls.log
 # ingore vitis project folder
 vitis/
 c_cpp_properties.json
+
+# ignore compilation bitstreams
+/compile/_x
+/compile/.ipcache
+/compile/.Xil
+/compile/build_dir
+/compile/*.log
