changes in source ready to merge
Former-commit-id: 2357133a035ed03d962663dd4945e84d3002cc47

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ local_seq_align_multiple_sa/vitis_hls.log
 # ingore vitis project folder
 vitis/
 c_cpp_properties.json
+
+# ignore project folder
+BasicKernel/
+
